Fix mirror on ios

--- a/src/app/page/mirror/mirror.component.scss
+++ b/src/app/page/mirror/mirror.component.scss
@@ -1,10 +1,13 @@
+:host {
+}
 video {
-  position: fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
   display: block;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  transform: scaleX(-1);
+  width: 100%;
+  height: 100vh;
   object-fit: cover;
+  transform: scaleX(-1);
+  pointer-events: none;
 }
